tests/errors/syn_cases1.java
public class syn_cases1 {
public static void main(String[] args){
switch(args.length){
53 :
}
}
}